test/data/fail/tokenizer/identifier.js
\ud835;
\udec3;
\ud835\udec3;
\u0061\ud835\udec3;
\ud835\udec3\u00c0;
